[gd_scene load_steps=2 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]

[node name="Main" type="Panel"]
margin_right = 1024.0
margin_bottom = 601.0
script = ExtResource( 1 )

[node name="CashLabel" type="Label" parent="."]
margin_left = 60.0
margin_top = 60.0
margin_right = 171.0
margin_bottom = 53.0
text = "Cash: $[250]"

[node name="CityLabel" type="Label" parent="."]
margin_left = 61.0
margin_top = 88.0
margin_right = 171.0
margin_bottom = 106.0
text = "City: $[Callao]"

[node name="FirmLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -81.5
margin_top = 20.0
margin_right = 81.5
margin_bottom = 26.0
text = "[FirmName]"
align = 1

[node name="ChimboteButton" type="Button" parent="."]
margin_left = 68.0
margin_top = 142.0
margin_right = 244.0
margin_bottom = 191.0
text = "Chimbote"

[node name="TumbesButton" type="Button" parent="."]
margin_left = 293.0
margin_top = 140.0
margin_right = 469.0
margin_bottom = 189.0
text = "Tumbes"

[node name="CallaoButton" type="Button" parent="."]
margin_left = 515.0
margin_top = 140.0
margin_right = 691.0
margin_bottom = 189.0
text = "Callao"

[connection signal="pressed" from="ChimboteButton" to="." method="_on_ChimboteButton_pressed"]
[connection signal="pressed" from="TumbesButton" to="." method="_on_TumbesButton_pressed"]
[connection signal="pressed" from="CallaoButton" to="." method="_on_CallaoButton_pressed"]
[connection signal="pressed" from="CallaoButton" to="." method="_on_TumbesButton_pressed"]
